--- a/plugin.xml
+++ b/plugin.xml
@@ -39,8 +39,8 @@
 			<uses-permission android:name="android.permission.WAKE_LOCK" />
 			<uses-permission android:name="android.permission.VIBRATE"/>
 			<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-			<permission android:name="biz.rocksolidsystems.africanfootball.permission.C2D_MESSAGE" android:protectionLevel="signature" />
-			<uses-permission android:name="biz.rocksolidsystems.africanfootball.permission.C2D_MESSAGE" />
+			<permission android:name="biz.rocksolidsystems.sportsdaily.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+			<uses-permission android:name="biz.rocksolidsystems.sportsdaily.permission.C2D_MESSAGE" />
 		</config-file>
 
 		<config-file target="AndroidManifest.xml" parent="/manifest/application">
@@ -49,7 +49,7 @@
 				<intent-filter>
 					<action android:name="com.google.android.c2dm.intent.RECEIVE" />
 					<action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-					<category android:name="biz.rocksolidsystems.africanfootball" />
+					<category android:name="biz.rocksolidsystems.sportsdaily" />
 				</intent-filter>
 			</receiver>
 			<service android:name="com.plugin.gcm.GCMIntentService" />
